# openflight

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  OPENGOLFSIM-INTEGRATION.md  OPENGOLFSIM-SETUP.md  PARTS.md  README-Python.md  README.md  SETUP-WINDOWS.md  TESTING.md  package-lock.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pylint.yml  pytest.yml
archive/: diagnose.py  golf-launch-monitor-wiring-guide.md  launch_monitor.py  setup.sh
content/: digikey-bom.md  diy-preamp-parts-list.md  tiktok-script-radar-limitations.md
docs/: CHANGELOG.md  PARTS.md  openflight_diagram.html  openlaunch_diagram.html  raspberry-pi-setup.md  rolling_buffer_spin_detection.md  sound-trigger-wiring.md  yolo-performance-tuning.md
rust/: Cargo.toml  README.md  RUST-MIGRATION.md
rust/src/: launch_monitor.rs  main.rs  mock_radar.rs  opengolfsim.rs  ops243.rs  shot.rs
scripts/: OpenFlight.desktop  OpenFlightRollingBuffer.desktop  OpenFlightSoundTrigger.desktop  OpenLaunch.desktop  calibrate_camera.py  capture_iq.py  capture_training_images.py  debug_gpio_passthrough.py  debug_hardware_trigger.py  debug_rolling_buffer.py  diagnose_fft.py  openflight.service  replay_captures.py  setup.sh  start-kiosk.sh  start_kiosk.sh  sync-to-pi.sh  test_bytetrack.py  test_camera_detection.py  test_launch_angle.py  test_radar_raw.py  test_sound_trigger_hardware.py  test_sound_trigger_passthrough.py  test_sound_trigger_software.py  test_yolo_detection.py  train_golf_ball_yolo11.ipynb
src/: launch_monitor.rs  ops243.rs  shot.rs
src/analysis/: analyze_capture.py
src/openflight/: __init__.py  camera_tracker.py  launch_monitor.py  ops243.py  server.py  session_logger.py
src/openflight/camera/: __init__.py  capture.py  detector.py  launch_angle.py  tracker.py
src/openflight/rolling_buffer/: __init__.py  monitor.py  processor.py  trigger.py
src/openflight/streaming/: cfar.py  processor.py
src/openlaunch/: __init__.py  launch_monitor.py  ops243.py  server.py
tests/: __init__.py  test_camera.py  test_launch_monitor.py  test_ops243.py  test_rolling_buffer.py  test_server.py  test_session_logger.py
ui/: README.md  package-lock.json  package.json
ui/.storybook/: main.ts  preview.ts
ui/src/: App.css  App.stories.tsx  App.tsx  index.css
ui/src/components/: BallDetectionIndicator.css  BallDetectionIndicator.tsx  CameraFeed.css  CameraFeed.tsx  ClubPicker.css  ClubPicker.tsx  ConnectionStatus.css  ConnectionStatus.tsx  DebugPanel.css  DebugPanel.tsx  ShotDisplay.css  ShotDisplay.tsx  ShotList.css  ShotList.tsx  StatsView.css
ui/src/components/LaunchDaddy/: LaunchDaddy.css  LaunchDaddyBrand.tsx  LaunchDaddyContext.tsx  LaunchDaddyOverlay.tsx
ui/src/hooks/: useSocket.ts
ui/src/logo/: Logo.tsx
ui/src/types/: shot.ts
